--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "clsx": "^1.2.1",
+    "immutability-helper": "^3.1.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-geolocation": "^1.1.0",
     "react-scripts": "5.0.1",
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
